# SystemVerilog_Learning

./: .gitignore  Chapter_1.ipynb  Chapter_2.ipynb  Chapter_22.ipynb  Chapter_4.ipynb  Chapter_5.ipynb  Chapter_7.ipynb  Chapter_9.ipynb  README.md  _quarto.yml  index.qmd  main.py  pyproject.toml  styles.css  systemverilog_learning_resources.ipynb  systemverilog_learning_resources_backup.ipynb  test.ipynb
.github/workflows/: quarto-publish.yml
notebooks/: Appendix_A.ipynb  Appendix_B.ipynb  Appendix_C.ipynb  Appendix_D.ipynb  Appendix_E.ipynb  Appendix_F.ipynb  Appendix_G.ipynb  Chapter_0.ipynb  Chapter_1.ipynb  Chapter_10.ipynb  Chapter_11.ipynb  Chapter_12.ipynb  Chapter_13.ipynb  Chapter_14.ipynb  Chapter_15.ipynb  Chapter_16.ipynb  Chapter_17.ipynb  Chapter_18.ipynb  Chapter_19.ipynb  Chapter_2.ipynb  Chapter_20.ipynb  Chapter_21.ipynb  Chapter_23.ipynb  Chapter_24.ipynb  Chapter_25.ipynb  Chapter_26.ipynb  Chapter_3.ipynb  Chapter_4.ipynb  Chapter_5.ipynb  Chapter_6.ipynb  Chapter_7.ipynb  Chapter_8.ipynb  Chapter_9.ipynb  Chapter__4_0.ipynb  Chapter__4_1.ipynb  Chapter__4_2.ipynb  Chapter__4_3.ipynb  Chapter__4_4.ipynb  Chapter__4_5.ipynb  Intro.ipynb  (+7 more)
notebooks/Chapter_2_examples/example_1/: .env  design_under_test.sv  design_under_test_testbench.sv
notebooks/Chapter_2_examples/example_1__hello_world/: .env  design_under_test.sv
notebooks/Chapter_2_examples/example_2__four_two_state/: .env  four_state_simple_testbench.sv
notebooks/Chapter_2_examples/four_two_state_example/: .env  docker-compose.yml  four_state_simple.sv  four_state_simple.vcd
(+887 files in other folders)
