[project]
name = "systemverilog-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grandalf>=0.8",
    "ipykernel>=6.29.5",
    "langgraph>=0.5.2",
    "plotly>=6.1.2",
    "vcdvcd>=2.3.6",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]


[tool.ruff]
line-length = 79
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []
fixable = ["I001"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
